[package]
name = "velum"
version = "0.9.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower = "0.4"
tower-http = { version = "0.3", features = ["fs", "timeout", "compression-br", "compression-deflate", "compression-gzip"] }
axum = { version = "0.5", features = ["headers", "http2", "multipart"] }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.12", features = ["full"] }
headers = "0.3.8"
mime_guess = "2.0"
tower-cookies = "0.7"
futures = { version = "0.3", features = ["executor"] }
axum-macros = "0.2"
walkdir = "2.3"
image = "0.24"

config = { version = "0.13.2", features = ["toml"] }
log = "0.4.0"
env_logger = "0.9.0"
pulldown-cmark = { version = "0.9.1", default-features = false, features = ["simd"] }
handlebars = "4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
bytes = "1.1"
filetime = "0.2"
regex = "1"
lazy_static = "1.4.0"
chrono = "0.4"
ordinal = "0.3.0"
bcrypt = "0.13"
rpassword = "7.0"
uuid = { version = "1.1", features = [ "v4", "fast-rng" ] }

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
